# mini-whisper-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: app.py
checkpoints/: whisper_tiny_finetuned.pt
finetune/: finetune.py
